Fix dark mode config

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,3 +291,7 @@ svg.cursor-pointer:hover {
 .react-datepicker__day--range-end {
   @apply bg-indigo-600 text-white hover:bg-white hover:text-gray-700;
 }
+
+html.dark {
+  background-color: rgb(15, 23, 42);
+}
